syntax = "proto3";

import "icon/metadata/metadata.proto";

package icon;

message Header
{
  uint32 message_number = 1;
}

message ConnectionEstablishReq
{
  option (icon.metadata.MESSAGE_NUMBER) = 0x10000001;
}

message ConnectionEstablishCfm
{
  option (icon.metadata.MESSAGE_NUMBER) = 0x10000002;
}

message HeartbeatReq
{
  option (icon.metadata.MESSAGE_NUMBER) = 0x10000003;
}

message HeartbeatCfm
{
  option (icon.metadata.MESSAGE_NUMBER) = 0x10000004;
}

message TestSeqReq
{
  option (icon.metadata.MESSAGE_NUMBER) = 0x10000005;
  uint32 seq = 1;
}

message TestSeqCfm
{
  option (icon.metadata.MESSAGE_NUMBER) = 0x10000006;
  uint32 seq = 1;
}